plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '4.0.2'
}

group = 'com.github.tzesti'
description = "TCX Converter"
version = '1.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainModule = 'com.github.tzesti.tcxconverter'
    mainClass = 'com.github.tzesti.tcxconverter.Main'
}

jlink {
    addExtraDependencies('javafx')

    launcher {
        name = "$rootProject.description"
    }

    jpackage {
        // javaHome = System.getenv('JAVA_HOME')
        // imageName = "$rootProject.description" // No spaces!
        // imageOptions = ['--icon', 'res/patrolchecker.ico']
        // imageOptions = ['--win-console']
        installerOptions = [
                // '--install-dir', 'TCXConverter',
                '--win-dir-chooser',
                '--win-menu',
                '--win-menu-group', '',
                '--win-upgrade-uuid', '9490a7c5-6401-4cff-96c6-9c1675cbe217' // Version 4
        ]

        appVersion = "${version}"
        installerType = 'msi'
    }
}

compileJava {
    //options.compilerArgs += ["-Xlint:unchecked"]
    // options.compilerArgs += ['--add-reads', 'com.philstar.app.PatrolChecker=ALL-UNNAMED']

    doFirst {
        def dir = new File(projectDir, "src/main/java/gradle")
        dir.mkdirs()
        new File(dir, "GradleProject.java").text = """package gradle;

public class GradleProject {
    public static final String ApplicationName = "$rootProject.description";
    public static final String ApplicationVersion = "$version";
}
"""
    }
}